--- a/RND.ipynb
+++ b/RND.ipynb
@@ -423,24 +423,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(np.float64(156.77200469970703), np.float64(167.9700050354004)), (np.float64(167.9700050354004), np.float64(179.16800537109376)), (np.float64(179.16800537109376), np.float64(190.3660057067871)), (np.float64(190.3660057067871), np.float64(201.5640060424805)), (np.float64(201.5640060424805), np.float64(212.76200637817382)), (np.float64(212.76200637817382), np.float64(223.9600067138672)), (np.float64(223.9600067138672), np.float64(235.15800704956055)), (np.float64(235.15800704956055), np.float64(246.35600738525392)), (np.float64(246.35600738525392), np.float64(257.55400772094725)), (np.float64(257.55400772094725), np.float64(268.7520080566406)), (np.float64(268.7520080566406), np.float64(279.950008392334)), (np.float64(279.950008392334), np.float64(291.1480087280274))]\n",
-      "0.11601623283679618\n",
       "Probabilities of Price Changes:\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/0f/9b2tzfy50n5cjx7pp1x3c6g80000gn/T/ipykernel_42336/669017942.py:17: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "  results_df = results_df.applymap(lambda x: f'{x:.7%}')\n"
      ]
     },
     {
@@ -521,16 +511,14 @@
     "                    ]\n",
     "# Calculate strike prices for the percentage ranges\n",
     "strike_prices = [(S0 * (1 + start / 100), S0 * (1 + end / 100)) for start, end in percentage_ranges]\n",
-    "print(strike_prices)\n",
     "# Calculate the cumulative probabilities for the strike prices\n",
     "cum_probs = [(lognorm.cdf(end, *popt) - lognorm.cdf(start, *popt)) for start, end in strike_prices]\n",
-    "print(lognorm.cdf(200, *popt))\n",
     "# Create a DataFrame to display the results\n",
     "columns = [f'{start}% < x < {end}%' for start, end in percentage_ranges]\n",
     "results_df = pd.DataFrame([cum_probs], columns=columns)\n",
     "\n",
     "# Format the probabilities as percentages\n",
-    "results_df = results_df.applymap(lambda x: f'{x:.7%}')\n",
+    "results_df = results_df.map(lambda x: f'{x:.7%}')\n",
     "\n",
     "# Display the results using IPython.display\n",
     "print(\"Probabilities of Price Changes:\")\n",
